sass install before hugo

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,9 @@
 name = "cloudflare-deploy" 
 compatibility_date = "2025-10-16" 
-pages_build_output_dir = "public" 
-  "version": "0..0", 
-  "private": true, 
-  "scripts": {
-    "deploy": "wrangler publish",
-    "start": "wrangler dev"
-    }
-    
+
+[build]
+command = "chmod a+x build.sh && ./build.sh"
+
+[assets]
+directory = "./public"
+not_found_handling = "404-page"
