--- a/package.json
+++ b/package.json
@@ -23,14 +23,13 @@
     "exec-bin": "^1.0.0",
     "fuse.js": "^6.6.2",
     "hugo-installer": "^4.0.1",
+    "latest": "^0.2.0",
     "npm-check": "^6.0.1",
     "postcss": "^8.4.24",
-    "postcss-cli": "^10.1.0"
+    "postcss-cli": "^10.1.0",
+    "sass": "^1.93.2"
   },
   "otherDependencies": {
     "hugo": "0.147.5"
-  },
-  "devDependencies": {
-    "sass": "^1.93.2"
   }
 }
