--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
     "bootstrap-print-css": "^1.0.1",
     "exec-bin": "^1.0.0",
     "fuse.js": "^6.6.2",
-    "hugo-installer": "^4.0.1",
+    "hugo-installer": "^2.0.0",
     "latest": "^0.2.0",
-    "npm-check": "^6.0.1",
+    "npm-check": "^3.2.10",
     "postcss": "^8.4.24",
-    "postcss-cli": "^10.1.0",
-    "sass": "^1.93.2"
+    "postcss-cli": "^10.1.0"
   },
   "otherDependencies": {
     "hugo": "0.147.5"
