--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "hugo-installer": "^4.0.1",
     "npm-check": "^6.0.1",
     "postcss": "^8.4.24",
-    "postcss-cli": "^10.1.0"
+    "postcss-cli": "^10.1.0",
+    "sass-embedded": "^1.93.2"
   },
   "otherDependencies": {
     "hugo": "0.147.5"
