--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "exec-bin node_modules/.bin/hugo/hugo server --gc --disableFastRender",
     "dev:preview": "exec-bin node_modules/.bin/hugo/hugo server --gc --disableFastRender --buildFuture --buildDrafts",
+    "grant-permiso": "chmod +x node_modules/.bin/sass && npm run build",
     "build": "exec-bin node_modules/.bin/hugo/hugo --gc --cleanDestinationDir --minify",
     "renderToDisk:dev": "exec-bin node_modules/.bin/hugo/hugo server --disableFastRender --renderToDisk --cleanDestinationDir",
     "renderToDisk:preview": "exec-bin node_modules/.bin/hugo/hugo server --renderToDisk --cleanDestinationDir --disableFastRender --buildDrafts --buildFuture ",
@@ -26,7 +27,7 @@
     "npm-check": "^6.0.1",
     "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
-    "sass-embedded": "^1.62.1"
+    "sass": "^1.62.1"
   },
   "otherDependencies": {
     "hugo": "0.149.0"
